#2 Move execution of words from switchi block to WordSet classes