@@ -22,38 +22,15 @@ import java.util.Set;
 import java.util.Stack;
 
 import com.github.mjvesa.f4v.DefinedWord.BaseWord;
-import com.vaadin.data.Container;
-import com.vaadin.data.Item;
-import com.vaadin.data.Property.ValueChangeEvent;
-import com.vaadin.data.Property.ValueChangeListener;
-import com.vaadin.event.ItemClickEvent;
-import com.vaadin.event.ItemClickEvent.ItemClickListener;
-import com.vaadin.ui.AbstractSelect;
-import com.vaadin.ui.AbstractSelect.NewItemHandler;
 import com.vaadin.ui.Button;
 import com.vaadin.ui.Button.ClickEvent;
 import com.vaadin.ui.Button.ClickListener;
-import com.vaadin.ui.CheckBox;
-import com.vaadin.ui.ComboBox;
-import com.vaadin.ui.Component;
 import com.vaadin.ui.ComponentContainer;
-import com.vaadin.ui.DateField;
-import com.vaadin.ui.Field;
-import com.vaadin.ui.GridLayout;
-import com.vaadin.ui.HorizontalLayout;
-import com.vaadin.ui.Label;
-import com.vaadin.ui.ListSelect;
-import com.vaadin.ui.Select;
-import com.vaadin.ui.Table;
-import com.vaadin.ui.TextField;
 import com.vaadin.ui.UI;
-import com.vaadin.ui.VerticalLayout;
-import com.vaadin.ui.Window;
 
 /**
- * 
- * The Interpreter has two roles: it executes code and also maintains global
- * interpreter state.
+ * Meat of the program. This contains the outer and inner interpreters and
+ * actually pretty much all of the logic.
  * 
  * @author mjvesa@vaadin.com
  * 
@@ -64,53 +41,44 @@ public class Interpreter implements ClickListener {
      * 
      */
 	private static final long serialVersionUID = -8695295335619892044L;
-
 	private HashMap<String, Word> dictionary;
 	private HashMap<String, String> source;
 	private Stack<Object> dataStack;
 	private Stack<Integer> returnStack;
 	private Stack<Word[]> codeStack;
 	private Object[] heap;
-	private DefinedWord currentDefinition;
+	private DefinedWord currentDefinition; // These two are used to define new
+											// words
 	private ArrayList<Word> currentDefinitionWords;
 	private boolean isCompiling;
-	private int ip;
-	private Word[] code;
+	private int ip; // These tell use where we are executing now
+	private DefinedWord[] code;
 	private Parser parser;
 	private ComponentContainer mainComponentContainer;
 	private Blocks blocks;
-	private boolean logNewWords;
-	private boolean logExecutedWords;
-
 	private GuiEventListener guiEventListener;
 	private SQL sql;
+	private boolean logNewWords;
+	private boolean logExecutedWords;
 
 	/**
 	 * Default constructor
 	 */
 	public Interpreter() {
-
-		// logNewWords = false;
-		// logExecutedWords = false;
-
-		dataStack = new Stack<Object>();
-		returnStack = new Stack<Integer>();
-		codeStack = new Stack<Word[]>();
-		heap = new Object[2000];
-		dictionary = new HashMap<String, Word>();
-
+		logNewWords = false;
+		logExecutedWords = false;
 	}
 
 	/**
 	 * Does actual setting up of the interpreters.
 	 */
 	public void setup() {
+		setUpStorage();
 		fillDictionary();
 		loadBuffers();
 		print("<b>Executing core buffer...</b>");
 		executeCore();
 
-		// TODO this should go to the SQL wordset when installing
 		sql = new SQL();
 		sql.setDictionary(dictionary);
 		sql.setHeap(heap);
@@ -135,16 +103,24 @@ public class Interpreter implements ClickListener {
 		return source.keySet();
 	}
 
-	// TODO to be replaced by "require Core"
-
 	private void executeCore() {
 		runBuffer(source.get("Core"));
 	}
 
 	/**
+	 * Initializes stacks, dictionary and heap
+	 */
+	private void setUpStorage() {
+
+		dataStack = new Stack<Object>();
+		returnStack = new Stack<Integer>();
+		codeStack = new Stack<DefinedWord[]>();
+		heap = new Object[2000];
+		dictionary = new HashMap<String, DefinedWord>();
+	}
+
+	/**
 	 * Pulls basic words from the list and
-	 * 
-	 * TODO this will replaced by installing wordsets instead
 	 */
 	private void fillDictionary() {
 		for (BaseWord bw : BaseWord.values()) {
@@ -200,13 +176,13 @@ public class Interpreter implements ClickListener {
 			} else {
 
 				if (dictionary.containsKey(word)) {
-					Word w = dictionary.get(word);
-					execute(w);
+					DefinedWord w = dictionary.get(word);
+					w.execute();
 				} else {
 					if (word.charAt(0) == '"') {
 						dataStack.push(word.substring(1, word.length() - 1));
 					} else if (Character.isDigit(word.charAt(0))) {
-						dataStack.push(Integer.valueOf(word));
+						dataStack.push(new Integer(Integer.parseInt(word)));
 					} else {
 						print("ERROR: didn't quite get this: " + word);
 					}
@@ -223,23 +199,27 @@ public class Interpreter implements ClickListener {
 	 * @param word
 	 */
 	private void compileWord(String word) {
+
 		if (dictionary.containsKey(word)) {
-			Word w = dictionary.get(word);
-			if (w.isImmediate()) {
-				execute(w);
-			} else {
-				currentDefinitionWords.add(w);
+			DefinedWord w = dictionary.get(word);
+			if (w.getType() != DefinedWord.Type.NOP) {
+				if (w.isImmediate()) {
+					execute(w);
+				} else {
+					currentDefinitionWords.add(w);
+				}
 			}
 		} else {
 			if (word.charAt(0) == '"') {
 				generateLiteral(word.substring(1, word.length() - 1));
 			} else if (Character.isDigit(word.charAt(0))) {
-				generateLiteral(Integer.valueOf(word));
+				generateLiteral(new Integer(Integer.parseInt(word)));
 			} else {
 				print("COMPILER ERROR: didn't quite get this: " + word
 						+ parser.getPosition());
 			}
 		}
+
 	}
 
 	/**
@@ -262,657 +242,7 @@ public class Interpreter implements ClickListener {
 			// TODO return to main loop or stop interpreting when this happens.
 		}
 
-		if (logExecutedWords) {
-			print("Executing: " + word.getName());
-		}
-
 		word.execute(this);
-	}
-
-	private void executeBaseWord(DefinedWord word) {
-
-		BaseWord baseWord = word.getBaseWord();
-		Integer address;
-		Integer a, b, c;
-		Object o1, o2, o3, o4;
-		Object value, o;
-		String str, str2;
-		Boolean bool;
-
-		ComponentContainer cc;
-		Window w;
-		Button btn;
-		DefinedWord wrd;
-		Word[] code;
-		Table table;
-		Field f;
-
-		final Item item;
-
-		if (logExecutedWords) {
-			print("Executing base word: " + word.getName());
-		}
-
-		try {
-
-			switch (baseWord) {
-
-			case LITERAL:
-				dataStack.push(word.getParam());
-				break;
-			case GENLITERAL:
-				generateLiteral(dataStack.pop());
-				break;
-			case STORE:
-				o1 = dataStack.pop();
-				address = (Integer) o1;
-				value = dataStack.pop();
-				heap[address] = value;
-				break;
-			case LOAD:
-				address = (Integer) dataStack.pop();
-				dataStack.push(heap[address]);
-				break;
-			case PRINT:
-				value = dataStack.pop();
-				print(value.toString());
-				break;
-			case ADD:
-				a = (Integer) dataStack.pop();
-				b = (Integer) dataStack.pop();
-				dataStack.push(a + b);
-				break;
-			case SUB:
-				a = (Integer) dataStack.pop();
-				b = (Integer) dataStack.pop();
-				dataStack.push(b - a);
-				break;
-			case MUL:
-				a = (Integer) dataStack.pop();
-				b = (Integer) dataStack.pop();
-				dataStack.push(b * a);
-				break;
-			case DIV:
-				a = (Integer) dataStack.pop();
-				b = (Integer) dataStack.pop();
-				dataStack.push(b / a);
-				break;
-			case NOT:
-				bool = (Boolean) dataStack.pop();
-				dataStack.push(!bool);
-				break;
-			case DUP: // ( a -- a a )
-				o = dataStack.pop();
-				dataStack.push(o);
-				dataStack.push(o);
-				break;
-			case OVER: // ( a b -- a b a )
-				o1 = dataStack.pop();
-				o2 = dataStack.pop();
-				dataStack.push(o2);
-				dataStack.push(o1);
-				dataStack.push(o2);
-				break;
-			case ROT: // ( a b c -- b c a )
-				o1 = dataStack.pop();
-				o2 = dataStack.pop();
-				o3 = dataStack.pop();
-				dataStack.push(o2);
-				dataStack.push(o1);
-				dataStack.push(o3);
-				break;
-			case MINUSROT: // ( a b c -- c a b )
-				o1 = dataStack.pop();
-				o2 = dataStack.pop();
-				o3 = dataStack.pop();
-				dataStack.push(o1);
-				dataStack.push(o3);
-				dataStack.push(o2);
-				break;
-			case NIP: // ( a b -- b )
-				o1 = dataStack.pop();
-				o2 = dataStack.pop();
-				dataStack.push(o1);
-				break;
-			case TUCK: // ( a b -- b a b )
-				o1 = dataStack.pop();
-				o2 = dataStack.pop();
-				dataStack.push(o1);
-				dataStack.push(o2);
-				dataStack.push(o1);
-				break;
-
-			case SWAP: // ( a b -- b a )
-				o1 = dataStack.pop();
-				o2 = dataStack.pop();
-				dataStack.push(o1);
-				dataStack.push(o2);
-				break;
-			case TWOSWAP: // ( a b c d -- c d a b)
-				o1 = dataStack.pop();
-				o2 = dataStack.pop();
-				o3 = dataStack.pop();
-				o4 = dataStack.pop();
-				dataStack.push(o2);
-				dataStack.push(o1);
-				dataStack.push(o4);
-				dataStack.push(o3);
-				break;
-			case DROP: // ( n -- )
-				dataStack.pop();
-				break;
-			case CREATE:
-				create();
-				break;
-			case STACKCREATE:
-				createFromStack();
-				break;
-			case CREATENOP:
-				DefinedWord nop = new DefinedWord();
-				nop.setType(DefinedWord.Type.NOP);
-				String name = parser.getNextWord();
-				dictionary.put(name, nop);
-				guiEventListener.newWord(name);
-				break;
-			case DOES:
-				code = this.code;
-
-				// Find where DOES> is
-				int i = code.length - 1;
-				while (code[i].getBaseWord() != BaseWord.DOES) {
-					i--;
-				}
-				i++; // We don't want to copy DOES> now do we
-				// Copy words over TODO use array stuff for this?
-				for (; i < code.length; i++) {
-					currentDefinitionWords.add(code[i]);
-				}
-				finishCompilation();
-				ip = code.length; // Don't execute stuff after DOES>
-				break;
-			case IMMEDIATE:
-				currentDefinition.setImmediate(true);
-				break;
-			case COMPILE:
-				wrd = getNextExecutableWord();
-				currentDefinitionWords.add(wrd);
-				break;
-			case COLONCREATE:
-				create();
-				break;
-			case ANONCREATE:
-				anonCreate();
-				break;
-			case FINISHCOMPILATION:
-				finishCompilation();
-				break;
-			case DO:
-				returnStack.push(ip);
-				break;
-			case LOOP:
-				a = (Integer) dataStack.pop();
-				a++;
-				b = (Integer) dataStack.pop();
-				if (a < b) {
-					ip = returnStack.pop();
-					returnStack.push(ip);
-					dataStack.push(b);
-					dataStack.push(a);
-				} else {
-					returnStack.pop();
-				}
-				break;
-			case IF:
-				bool = (Boolean) dataStack.pop();
-				// If false, skip to endif
-				if (!bool) {
-					ip += (Integer) word.getParam();
-					System.out.println("IF Jumping to: "
-							+ this.code[ip + 1].toString());
-				}
-				break;
-			case ELSE:
-				ip += (Integer) word.getParam();
-				System.out.println("ELSE Jumping to what is after: "
-						+ this.code[ip].toString());
-				break;
-			case ENDIF:
-				// Find latest IF
-				// set current address minus one as parameter
-				i = currentDefinitionWords.size() - 1;
-				int jumpDest = i;
-				while (currentDefinitionWords.get(i).getBaseWord() != BaseWord.IF) {
-					if (currentDefinitionWords.get(i).getBaseWord() == BaseWord.ELSE) {
-						currentDefinitionWords.get(i).setParam(jumpDest - i);
-						jumpDest = i; // IF jumps to word after else
-					}
-					i--;
-
-					// TODO should we check if we are stepping out of array?
-					// Nah.
-				}
-				currentDefinitionWords.get(i).setParam(jumpDest - i);
-				break;
-			case BEGIN:
-				returnStack.push(ip);
-				break;
-			case WHILE:
-				bool = (Boolean) dataStack.pop();
-				if (!bool) {
-					code = this.code;
-					while (code[ip].getBaseWord() != BaseWord.REPEAT) {
-						ip++;
-					}
-					returnStack.pop();
-				}
-				break;
-			case REPEAT:
-				ip = returnStack.pop();
-				returnStack.push(ip); // TODO might be off by one
-				break;
-			case LESSTHANZERO:
-				a = (Integer) dataStack.pop();
-				dataStack.push((Boolean) (a < 0));
-				break;
-			case ZERO:
-				a = (Integer) dataStack.pop();
-				dataStack.push((Boolean) (a == 0));
-				break;
-			case GREATERTHANZERO:
-				a = (Integer) dataStack.pop();
-				dataStack.push((Boolean) (a > 0));
-				break;
-			case LESSTHAN:
-				a = (Integer) dataStack.pop();
-				b = (Integer) dataStack.pop();
-				dataStack.push((Boolean) (b < a));
-				break;
-			case EQUALS:
-				a = (Integer) dataStack.pop();
-				b = (Integer) dataStack.pop();
-				dataStack.push((Boolean) (b.intValue() == a.intValue()));
-				break;
-			case GREATERTHAN: // (a b -- a > b )
-				b = (Integer) dataStack.pop();
-				a = (Integer) dataStack.pop();
-				dataStack.push((Boolean) (a > b));
-				break;
-
-			case ISXT: // ( XT? -- Boolean )
-				dataStack.push(dataStack.pop() instanceof DefinedWord);
-				break;
-			case WORDS:
-				printWords();
-				break;
-
-			case BEGINCOMMENT:
-				str = parser.getNextWord();
-				while (!")".equals(str)) {
-					str = parser.getNextWord();
-				}
-				break;
-			case ENDCOMMENT:
-				// Doesn't do squat (yet?)
-				break;
-			case BEGININTERPRET:
-				isCompiling = false;
-				break;
-			case ENDINTERPRET:
-				isCompiling = true;
-				break;
-			case STRTOINT:
-				str = dataStack.pop().toString();
-				dataStack.push(str.isEmpty() ? 0 : Integer.parseInt(str));
-				break;
-			case INTTOSTR:
-				a = (Integer) dataStack.pop();
-				dataStack.push(a.toString());
-				break;
-			case TICK: // ( str -- xt )
-				// wrd = dictionary.get(parser.getNextWord());
-				str = (String) dataStack.pop();
-				wrd = dictionary.get(str);
-				dataStack.push(wrd);
-				break;
-			case BRACKETTICK:
-				str = (String) dataStack.pop();
-				wrd = dictionary.get(str);
-				currentDefinitionWords.add(wrd);
-				break;
-			case FIND: // ( str -- xt )
-				str = (String) dataStack.pop();
-				wrd = dictionary.get(str);
-				if (wrd == null) {
-					print("FIND did not find word " + str);
-				}
-				dataStack.push(wrd);
-				break;
-			case EXECUTE:
-				wrd = (DefinedWord) dataStack.pop();
-				returnStack.push(ip);
-				codeStack.push(this.code);
-				execute(wrd);
-				ip = returnStack.pop();
-				this.code = codeStack.pop();
-				break;
-			case WORD:
-				dataStack.push(parser.getNextWord());
-				break;
-			case CAT:
-				str = (String) dataStack.pop();
-				str2 = (String) dataStack.pop();
-				dataStack.push(str2 + str);
-				break;
-			case NULL:
-				dataStack.push(Util.NULL_OBJECT);
-				break;
-			case OBJEQUALS:
-				o1 = dataStack.pop();
-				o2 = dataStack.pop();
-				dataStack.push(o1.equals(o2));
-				break;
-
-			case LIST_TERMINATOR:
-				dataStack.push(Util.LIST_TERMINATOR);
-				break;
-			case EXECBUFFER:
-				str = (String) dataStack.pop();
-				interpret(source.get(str));
-				break;
-
-			case PRINTSTACK:
-				printStack();
-				break;
-
-			case LOG:
-				print((String) dataStack.pop());
-				break;
-			/******************************
-			 * Here starteth the Vaadin words.
-			 *******************************/
-
-			case NEWBUTTON:
-				btn = new Button("", this);
-				dataStack.push(btn);
-				break;
-			case SETCLICKLISTENER:
-				o = dataStack.pop();
-				btn = (Button) dataStack.pop();
-				btn.setData(o);
-				dataStack.push(btn);
-				break;
-			case NEWHL:
-				HorizontalLayout hl = new HorizontalLayout();
-				hl.setSpacing(true);
-				dataStack.push(hl);
-				break;
-			case NEWVL:
-				VerticalLayout vl = new VerticalLayout();
-				vl.setSpacing(true);
-				dataStack.push(vl);
-				break;
-			case NEWGL: // ( x y - gl )
-				b = (Integer) dataStack.pop();
-				a = (Integer) dataStack.pop();
-				dataStack.push(new GridLayout(a, b));
-				break;
-			case GLNEWLINE:
-				((GridLayout) dataStack.get(0)).newLine();
-				break;
-			case NEWWINDOW:
-				w = new Window();
-				((VerticalLayout) w.getContent()).setSpacing(true);
-				dataStack.push(w);
-				break;
-			case MAINPANEL:
-				dataStack.push(mainComponentContainer);
-				break;
-			case ADDWINDOW:
-				w = (Window) dataStack.pop();
-				guiEventListener.getUI().addWindow(w);
-				break;
-			case ADDCOMPONENT:
-				Component comp = (Component) dataStack.pop();
-				cc = (ComponentContainer) dataStack.pop();
-				cc.addComponent(comp);
-				dataStack.push(cc);
-				break;
-			case SETCAPTION:
-				str = (String) dataStack.pop();
-				comp = (Component) dataStack.pop();
-				comp.setCaption(str);
-				dataStack.push(comp);
-				break;
-			case SETVALUE:
-				o = dataStack.pop();
-				f = (Field) dataStack.pop();
-				f.setValue(o);
-				dataStack.push(f);
-				break;
-			case GETVALUE:
-				f = (Field) dataStack.pop();
-				dataStack.push(f);
-				dataStack.push(f.getValue());
-				break;
-			case SETSIZEFULL:
-				comp = (Component) dataStack.pop();
-				comp.setSizeFull();
-				dataStack.push(comp);
-				break;
-			case SETSIZEUNDEFINED:
-				comp = (Component) dataStack.pop();
-				comp.setSizeUndefined();
-				dataStack.push(comp);
-				break;
-			case SETHEIGHT:
-				str = (String) dataStack.pop();
-				comp = (Component) dataStack.pop();
-				comp.setHeight(str);
-				dataStack.push(comp);
-				break;
-			case SETWIDTH:
-				str = (String) dataStack.pop();
-				comp = (Component) dataStack.pop();
-				comp.setWidth(str);
-				dataStack.push(comp);
-				break;
-			case CLEARCONTAINER:
-				cc = (ComponentContainer) dataStack.pop();
-				cc.removeAllComponents();
-				break;
-			case NEWCHECKBOX:
-				dataStack.push(new CheckBox());
-				break;
-			case NEWDATEFIELD:
-				dataStack.push(new DateField());
-				final String dfCommand = (String) dataStack.pop();
-				DateField df = new DateField();
-				df.setImmediate(true);
-				df.addListener(new ValueChangeListener() {
-					public void valueChange(ValueChangeEvent event) {
-						dataStack.push(event.getProperty().getValue());
-						interpret(dfCommand);
-					}
-				});
-				dataStack.push(df);
-				break;
-			case NEWLABEL:
-				dataStack.push(new Label());
-				break;
-			case NEWTEXTFIELD: // ( caption -- textfield)
-				final String tfCommand = getNextNonNopWord();
-				TextField tf = new TextField();
-				tf.setCaption((String) dataStack.pop());
-				tf.setValue("");
-				tf.setImmediate(true);
-				tf.addValueChangeListener(new ValueChangeListener() {
-					/**
-		 * 
-		 */
-					private static final long serialVersionUID = 4325104922208051065L;
-
-					public void valueChange(ValueChangeEvent event) {
-						dataStack.push(event.getProperty().getValue());
-						interpret(tfCommand);
-					}
-				});
-				dataStack.push(tf);
-				break;
-			/* Tables */
-			case NEWTABLE:
-				final String tableCommand = getNextNonNopWord();
-				table = new Table();
-				table.setCaption((String) dataStack.pop());
-				table.setImmediate(true);
-				table.setSelectable(true);
-				table.addListener(new ItemClickListener() {
-
-					/**
-		 * 
-		 */
-					private static final long serialVersionUID = 3585546076571010729L;
-
-					public void itemClick(ItemClickEvent event) {
-
-						dataStack.push(event.getItem());
-						executeDefinedWord(dictionary.get(tableCommand));
-					}
-				});
-				dataStack.push(table);
-				break;
-
-			case NEWCOMBOBOX:
-				final String newItemCommand = getNextNonNopWord();
-				final String itemSelectedCommand = getNextNonNopWord();
-				final ComboBox cb = new ComboBox();
-				cb.setImmediate(true);
-				str = (String) dataStack.pop();
-				cb.setNullSelectionAllowed(false);
-				cb.setCaption(str);
-				cb.setItemCaptionMode(AbstractSelect.ITEM_CAPTION_MODE_ITEM);
-				cb.setNewItemsAllowed(true);
-				cb.setNewItemHandler(new NewItemHandler() {
-
-					/**
-                     * 
-                     */
-					private static final long serialVersionUID = 3340658590351611289L;
-
-					public void addNewItem(String newItemCaption) {
-						cb.setImmediate(false);
-						dataStack.push(newItemCaption);
-						interpret(newItemCommand);
-						cb.setImmediate(true);
-					}
-				});
-
-				cb.addValueChangeListener(new ValueChangeListener() {
-
-					/**
-                     * 
-                     */
-					private static final long serialVersionUID = 2706579869793251379L;
-
-					public void valueChange(ValueChangeEvent event) {
-						dataStack.push(cb.getContainerDataSource().getItem(
-								event.getProperty().getValue()));
-						interpret(itemSelectedCommand);
-					}
-				});
-				dataStack.push(cb);
-				break;
-			case NEWSELECT:
-				final String selCommand = getNextNonNopWord();
-				final Select sel = new Select();
-				sel.setCaption((String) dataStack.pop());
-				sel.setItemCaptionMode(AbstractSelect.ITEM_CAPTION_MODE_ITEM);
-				sel.setNullSelectionAllowed(false);
-				sel.setImmediate(true);
-				sel.addValueChangeListener(new ValueChangeListener() {
-					/**
-                     * 
-                     */
-					private static final long serialVersionUID = -7705548618092166199L;
-
-					public void valueChange(ValueChangeEvent event) {
-						Item item = sel.getContainerDataSource().getItem(
-								event.getProperty().getValue());
-						dataStack.push(item);
-						interpret(selCommand);
-					}
-				});
-				dataStack.push(sel);
-				break;
-			case NEWLISTSELECT:
-				final String lselCommand = getNextNonNopWord();
-				final ListSelect lsel = new ListSelect();
-				lsel.setCaption((String) dataStack.pop());
-				lsel.setItemCaptionMode(AbstractSelect.ITEM_CAPTION_MODE_ITEM);
-				lsel.setNullSelectionAllowed(false);
-				lsel.setImmediate(true);
-				lsel.addValueChangeListener(new ValueChangeListener() {
-					/**
-                     * 
-                     */
-					private static final long serialVersionUID = -5523488417834167806L;
-
-					public void valueChange(ValueChangeEvent event) {
-						Item item = lsel.getContainerDataSource().getItem(
-								event.getProperty().getValue());
-						dataStack.push(item);
-						interpret(lselCommand);
-					}
-				});
-				dataStack.push(lsel);
-				break;
-			case SETCONTAINERDATASOURCE:
-				Container cont = (Container) dataStack.pop();
-				AbstractSelect as = (AbstractSelect) dataStack.pop();
-				as.setContainerDataSource(cont);
-				dataStack.push(as);
-				break;
-			case SETCOLUMHEADERS:
-				table = (Table) dataStack.pop();
-				table.setColumnHeaders((String[]) sql
-						.getArrayFromList(new String[0]));
-				break;
-			case SETVISIBLECOLUMNS:
-				table = (Table) dataStack.pop();
-				table.setVisibleColumns((String[]) sql
-						.getArrayFromList(new String[0]));
-				break;
-			/* Database stuff */
-			case CREATESQLCONTAINER:
-				str = (String) dataStack.pop();
-				dataStack.push(sql.createIndexedContainerFromQuery(str, false));
-				break;
-			case CREATEFILTEREDSQLCONTAINER:
-				str = (String) dataStack.pop();
-				dataStack.push(sql.createIndexedContainerFromQuery(str, true));
-				break;
-			case DOQUERY:
-				sql.doQuery((String) dataStack.pop());
-				break;
-			case GETPROPERTY:
-				str = (String) dataStack.pop();
-				item = (Item) dataStack.pop();
-				dataStack.push(item);
-				dataStack.push(item.getItemProperty(str).getValue());
-				break;
-			case SETPROPERTY:
-				str = (String) dataStack.pop();
-				str2 = (String) dataStack.pop();
-				item = (Item) dataStack.pop();
-				item.getItemProperty(str2).setValue(str);
-				break;
-			default:
-				break;
-			}
-
-		} catch (Exception e) {
-			print("Exception " + e.getClass() + " " + parser.getPosition()
-					+ " baseword " + word.toString());
-		}
 
 	}
 
@@ -948,10 +278,7 @@ public class Interpreter implements ClickListener {
 	}
 
 	private void create() {
-		String name = parser.getNextWord();
-		createNewWord(name);
-		guiEventListener.newWord(name);
-
+		createNewWord(parser.getNextWord());
 	}
 
 	private void createFromStack() {
@@ -960,6 +287,40 @@ public class Interpreter implements ClickListener {
 
 	private void anonCreate() {
 		createNewWord("_anonymous_");
+	}
+
+	private void createNewWord(String name) {
+		if (isCompiling) {
+			// TODO is this the right thing to do? "Specs" seem kinda vague
+			finishCompilation();
+		}
+		currentDefinition = new DefinedWord();
+		currentDefinition.setType(DefinedWord.Type.DEFINED);
+		guiEventListener.newWord(name);
+		// wordListSelect.addItem();
+		currentDefinition.setName(name);
+		dictionary.put(name, currentDefinition);
+		currentDefinitionWords = new ArrayList<DefinedWord>();
+		isCompiling = true;
+	}
+
+	/*
+	 * Used to finish compilation of either colon definitions or stuff made with
+	 * CREATE. Or anonymous colon definition.
+	 */
+	private void finishCompilation() {
+		String name = currentDefinition.getName();
+		currentDefinition.setCode(currentDefinitionWords
+				.toArray(new DefinedWord[1]));
+		if (logNewWords) {
+			print("ADDED: " + name);
+		}
+		isCompiling = false;
+
+		// if we just created an anonymous word, push it
+		if ("_anonymous_".equals(name)) {
+			dataStack.push(currentDefinition);
+		}
 	}
 
 	/*
@@ -1005,182 +366,39 @@ public class Interpreter implements ClickListener {
 	}
 
 	public void addSource(String name, String code) {
+
 		blocks.saveBuffer(name, code);
 		source.put(name, code);
 
+	}
+
+	public String getSource(String value) {
+		return source.get(value);
+	}
+
+	public void continueExecution() {
+		// TODO Auto-generated method stub
+
+	}
+
+	public void setLogNewWords(boolean b) {
+		logNewWords = b;
+	}
+
+	public void setLogExecutedWords(boolean b) {
+		logExecutedWords = b;
 	}
 
 	public HashMap<String, Word> getDictionary() {
 		return dictionary;
 	}
 
-	public void setDictionary(HashMap<String, Word> dictionary) {
-		this.dictionary = dictionary;
+	public Object popData() {
+		return dataStack.pop();
 	}
 
-	public HashMap<String, String> getSource() {
-		return source;
-	}
-
-	public void setSource(HashMap<String, String> source) {
-		this.source = source;
-	}
-
-	public Stack<Object> getDataStack() {
-		return dataStack;
-	}
-
-	public void setDataStack(Stack<Object> dataStack) {
-		this.dataStack = dataStack;
-	}
-
-	public Stack<Integer> getReturnStack() {
-		return returnStack;
-	}
-
-	public void setReturnStack(Stack<Integer> returnStack) {
-		this.returnStack = returnStack;
-	}
-
-	public Stack<Word[]> getCodeStack() {
-		return codeStack;
-	}
-
-	public void setCodeStack(Stack<Word[]> codeStack) {
-		this.codeStack = codeStack;
-	}
-
-	public Object[] getHeap() {
-		return heap;
-	}
-
-	public void setHeap(Object[] heap) {
-		this.heap = heap;
-	}
-
-	public DefinedWord getCurrentDefinition() {
-		return currentDefinition;
-	}
-
-	public void setCurrentDefinition(DefinedWord currentDefinition) {
-		this.currentDefinition = currentDefinition;
-	}
-
-	public ArrayList<Word> getCurrentDefinitionWords() {
-		return currentDefinitionWords;
-	}
-
-	public void setCurrentDefinitionWords(ArrayList<Word> currentDefinitionWords) {
-		this.currentDefinitionWords = currentDefinitionWords;
-	}
-
-	public boolean isCompiling() {
-		return isCompiling;
-	}
-
-	public void setCompiling(boolean isCompiling) {
-		this.isCompiling = isCompiling;
-	}
-
-	public int getIp() {
-		return ip;
-	}
-
-	public void setIp(int ip) {
-		this.ip = ip;
-	}
-
-	public Word[] getCode() {
-		return code;
-	}
-
-	public void setCode(Word[] code) {
-		this.code = code;
-	}
-
-	public Parser getParser() {
-		return parser;
-	}
-
-	public void setParser(Parser parser) {
-		this.parser = parser;
-	}
-
-	public ComponentContainer getMainComponentContainer() {
-		return mainComponentContainer;
-	}
-
-	public void setMainComponentContainer(
-			ComponentContainer mainComponentContainer) {
-		this.mainComponentContainer = mainComponentContainer;
-	}
-
-	public Blocks getBlocks() {
-		return blocks;
-	}
-
-	public void setBlocks(Blocks blocks) {
-		this.blocks = blocks;
-	}
-
-	public boolean isLogNewWords() {
-		return logNewWords;
-	}
-
-	public void setLogNewWords(boolean logNewWords) {
-		this.logNewWords = logNewWords;
-	}
-
-	public boolean isLogExecutedWords() {
-		return logExecutedWords;
-	}
-
-	public void setLogExecutedWords(boolean logExecutedWords) {
-		this.logExecutedWords = logExecutedWords;
-	}
-
-	public void createNewWord(String name) {
-		if (isCompiling) {
-			// TODO is this the right thing to do? "Specs" seem kinda vague
-			finishCompilation();
-		}
-		currentDefinition = new DefinedWord();
-		currentDefinition.setType(DefinedWord.Type.DEFINED);
-		// wordListSelect.addItem();
-		currentDefinition.setName(name);
-		dictionary.put(name, currentDefinition);
-		isCompiling = true;
-
-	}
-
-	/*
-	 * Used to finish compilation of either colon definitions or stuff made with
-	 * CREATE. Or anonymous colon definition.
-	 */
-	public void finishCompilation() {
-		String name = currentDefinition.getName();
-		currentDefinition.setCode(currentDefinitionWords
-				.toArray(new DefinedWord[1]));
-		if (logNewWords) {
-			print("ADDED: " + name);
-		}
-		isCompiling = false;
-
-		// if we just created an anonymous word, push it
-		if ("_anonymous_".equals(name)) {
-			dataStack.push(currentDefinition);
-		}
-	}
-
-	public void executeDefinedWord(Word[] code) {
-		codeStack.push(code);
-		returnStack.push(ip);
-		this.code = code;
-		ip = 0;
-		while (ip < code.length) {
-			code[ip].execute(this);
-			ip++;
-		}
+	public void pushData(Object obj) {
+		dataStack.push(obj);
 	}
 
 }
